--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,16 +1,8 @@
-       
 <IfModule mod_rewrite.c>
-  
-Options -MultiViews 
-
- RewriteEngine On
-
- RewriteBase /project_php/public
-
- # Send Requests To Front Controller...
- RewriteCond %{REQUEST_FILENAME} !-d
- RewriteCond %{REQUEST_FILENAME} !-f
- RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
+  Options -Multiviews
+  RewriteEngine On
+  RewriteBase /Test/public
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteRule  ^(.+)$ index.php?url=$1 [QSA,L]
 </IfModule>
-
-
